# makevol

./: .ycm_extra_conf.py  CMakeLists.txt  README.md
src/: Volume.h  bbox.h  clargs.cpp  clargs.h  cuboidvolume.h  makevol.cpp  point3.h  rubiksvolume.h  sparse_cubes.h  sphericalvolume.h
vs/: makevol.sln  makevol.vcxproj  makevol.vcxproj.filters
